# cadence-rag

./: .env.example  .gitignore  AGENTS.md  APP_SPEC.md  Dockerfile  IMPLEMENTATION_PLAN.md  NVIDIA_IMMERSION_PLAN.md  P620_TRITON_QWEN3_4B_EMBEDDING_RUNBOOK.md  PHASED_PLAN.md  README.md  REVIEW_TRIAGE_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_external_id_columns.py  0003_add_bm25_indexes.py  0004_sourcehash_uq.py  0005_add_bm25_ngram.py  0006_add_artifact_chunks.py  0007_add_ingest_jobs.py  0008_add_transcript_ingests.py
app/: browse.py  config.py  db.py  embedding_pipeline.py  embeddings.py  ingest.py  ingest_adapters.py  ingest_fs.py  logging_utils.py  main.py  retrieve.py  schemas.py
app/scripts/: __init__.py  embed_backfill.py  ingest_scanner.py  ingest_worker.py  tech_tokens_backfill.py
cadence_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eval/: README.md  gold_sample.jsonl  regression_gate.py  run_eval.py  run_real_regression_gate.py
personal_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/integration/: test_ingest_jobs.py  test_ingest_retrieve.py
tests/unit/: test_embedding_pipeline.py  test_embeddings_client.py  test_ingest_adapters.py  test_ingest_fs.py  test_ingest_utils.py  test_retrieve_planner.py  test_schemas.py
